--- a/css/timerstyle.css
+++ b/css/timerstyle.css
@@ -1,7 +1,6 @@
 .set-timer{
     width: fit-content;
     padding: 10px;
-    border: 1px solid black;
     margin-bottom: 20px;
 }
 .set-timer form{
@@ -39,7 +38,7 @@ input:focus{
     display: flex;
     align-items: center;
     margin: 10px 15px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     height: 30%;
     margin-bottom: 20px;
 }
@@ -50,5 +49,6 @@ input:focus{
     width: 100px;
 }
 .clicked{
-    background-color: yellow;
+    background-color: #A69177;
+    color: white;
 }
